Resurrect /email/token
